fixing overflow about section

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -163,6 +163,7 @@ h5 {
   margin: 0;
   padding: 200px 0 260px 0;
   background-size: cover;
+  overflow: auto;
 }
 
 #projects{
